--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="AWS, certification, study guides, Solutions Architect, flashcards, practice tests, Reese Gerjekian">
+    <meta name="description" content="{{ .Site.Params.description }}">
+    <link rel="canonical" href="{{ .Permalink }}">
+    <meta name="author" content="{{ .Site.Params.author }}">
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="{{ "css/styles.css" | relURL }}">
+    <link rel="manifest" href="/manifest.json">
+    <meta property="og:title" content="{{ .Title }}">
+    <meta property="og:description" content="{{ .Site.Params.description }}">
+    <meta property="og:image" content="{{ .Site.Params.image | default "path/to/default-image.jpg" }}">
+    <meta property="og:url" content="{{ .Permalink }}">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ .Title }}">
+    <meta name="twitter:description" content="{{ .Site.Params.description }}">
+    <meta name="twitter:image" content="{{ .Site.Params.image | default "path/to/default-image.jpg" }}">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     {{ if in .Permalink "/saa/" }}
