--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{{ .Site.Params.description }}">
     <link rel="canonical" href="{{ .Permalink }}">
     <meta name="author" content="{{ .Site.Params.author }}">
+    <link rel="icon" href="{{ "/images/icons/icon-512x512.png" | relURL }}" type="image/png">
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="{{ "css/styles.css" | relURL }}">
     <link rel="manifest" href="/manifest.json">
