--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -373,24 +373,27 @@ iframe, embed {
     background-color: #ff9900;
 }
 
-/* Breadcrumb Styles */
+.breadcrumb-container {
+    margin: 0 auto;
+    margin-top: 90px;
+}
+
 .breadcrumbs {
-    font-size: 14px;
-    margin: 10px 20px;
-    color: #333;
+    font-size: 14px; /* Adjust font size as needed */
+    color: #333; /* Dark color for visibility */
 }
 
 .breadcrumbs a {
-    color: #146eb4;
-    text-decoration: none;
+    color: #007bff; /* Link color */
+    text-decoration: none; /* Remove underline from links */
+}
+
+.guide {
+    text-transform: uppercase; /* This will make the text all caps */
 }
 
 .breadcrumbs a:hover {
-    text-decoration: underline;
-}
-
-.breadcrumbs .breadcrumb-current {
-    color: #555;
+    text-decoration: underline; /* Underline on hover */
 }
 
 /* Navbar Breadcrumb Style */
