--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="AWS, certification, study guides, Solutions Architect, flashcards, practice tests, Reese Gerjekian">
-    <meta name="description" content="{{ .Site.Params.description }}">
+    <meta name="description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <link rel="canonical" href="{{ .Permalink }}">
-    <meta name="author" content="{{ .Site.Params.author }}">
+    <meta name="author" content="Reese Gerjekian">
     <link rel="icon" href="{{ "/images/icons/icon-512x512.png" | relURL }}" type="image/png">
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="{{ "css/styles.css" | relURL }}">
     <link rel="manifest" href="/manifest.json">
     <meta property="og:title" content="{{ .Title }}">
-    <meta property="og:description" content="{{ .Site.Params.description }}">
+    <meta property="og:description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <meta property="og:image" content="{{ .Site.Params.image | default "/images/icons/icon-512x512.png" }}">
     <meta property="og:url" content="{{ .Permalink }}">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ .Title }}">
-    <meta name="twitter:description" content="{{ .Site.Params.description }}">
+    <meta name="twitter:description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <meta name="twitter:image" content="{{ .Site.Params.image | default "/images/icons/icon-512x512.png" }}">
     <meta name="robots" content="index, follow">
 </head>
